index news section fixed on mobile

--- a/styles.css
+++ b/styles.css
@@ -211,14 +211,22 @@ section.banner {
 	margin: 0% 5%;
 }
 
-.second-section p {
-	max-width: 45%;
+.second-section p {	
 	border-radius: 5px;
 	box-shadow: 5px 10px 18px #888888;
 	background-color: #DCDCDC;	
 	padding: 2%;
 }
-
+/* max-width: 45% only on desktop*/
+@media (min-width: 750px) {
+.second-section p { 
+	max-width: 45%;
+	border-radius: 5px;
+	box-shadow: 5px 10px 18px #888888;
+	background-color: #DCDCDC;	
+	padding: 2%;
+	}	
+}
 .second-section h2 {
 	margin: 0px;
 	text-align: center;
@@ -254,12 +262,6 @@ section.banner {
 	display: block;
 	margin-top: 15px;
 	margin-bottom: 0px;
-}
-
-@media only screen and(max-width:750px){
-	.second-section {		
-		border: 2px solid red;
-	}
 }
 
 /* Titas CSS section end*/
